added border animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 						<li><a href="">Mission</a></li>
 						<li><a href="">Vision</a></li>
 						<li><a href="">Team</a></li>
+						<li><a href="border animation.html">click animation</a></li>
 					</ul>
 				</div>
 			</li>
